--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "node-static": "^0.7.11"
     }
 }
