--- a/src/package.json
+++ b/src/package.json
@@ -2,9 +2,10 @@
   "name": "myproject",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.mjs",
-    "dev": "nodemon -e js,pug,css --exec node index.js",
+    "dev": "nodemon -e js,mjs,pug,css --exec node index.mjs",
     "build:docker": "docker build -t se-docker-express-pug .",
     "start:docker": "docker run -d -p 3000:3000 se-docker-express-pug",
     "test": "echo \"Error: no test specified\" && exit 1"
