--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - checkout                              # check out the code in the project directory
       - run: echo "hello world"               # print 'hello world'
-      - run: const [rows, fields] = await db.execute("SELECT * FROM `city`");
+      - run: echo row.population
+      - run: echo value
 
 workflows:
   my-workflow:                                # Name of the workflow. You can additional workflows below.
