--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,22 +3,13 @@ version: 2.1
 jobs:
   works-job:
     docker:
-      - image: cimg/node:17.2.0               # the primary container, where your job's commands are run
+      - image: cimg/node:17.2.0
     steps:
-      - checkout                              # check out the code in the project directory
-      - run: echo "hello world"               # print 'hello world'
-      - run: echo row.population
-      - run: echo value
-      - run: |
-          app.get("/", async (req, res) => {
-            try{
-              const sumPopulation = await db.execute("SELECT SUM(Population) FROM country");
-              //console.log(sumPopulation)
-              return res.render("index" , { sumPopulation: sumPopulation[0][0] });
-            } catch(err) {
-              console.error(err);
-            }
+      - checkout
+      - run: echo "hello world"
+      - run: node index.mjs
+
 workflows:
-  my-workflow:                                # Name of the workflow. You can additional workflows below.
-    jobs:                                     # The jobs to run as part of this workflow
-      - works-job                             # Example 'hello world' job.
+  my-workflow:
+    jobs:
+      - works-job
