--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: echo "hello world"
-      - run: node  home/SoftEngGroup/.circleci/index.mjs
+      - run: node  home/SoftEngGroup/index.mjs
 
 workflows:
   my-workflow:
