--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - checkout
       - run: echo "hello world"
-      - run: node  index.mjs
+      - run: ls -la                        # List the contents of the project directory
+      - run: node index.mjs
 
 workflows:
   my-workflow:
