--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: echo "hello world"
+      - run: npm install                    # Install dependencies
       - run: node src/index.mjs
 
 workflows:
