--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - checkout
       - run: echo "hello world" 
-      - run: npm run                 # Install dependencies
+      - run: npm install
+      - run: npm run                
       - run: npm test
 
 workflows:
