--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: echo "hello world" 
+      - run: ls -la
       - run: npm install
       - run: npm run                
       - run: npm test
