--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
     "pug": "^3.0.2"
   },
